src/nohup.out
  File "/export/space3/users/yaelmont/2026-1/BIOPYTHON/H_contortus_Transcriptomics/src/bioproject_pipeline.py", line 101
    if not email:
                 ^
IndentationError: unindent does not match any outer indentation level
  File "/export/space3/users/yaelmont/2026-1/BIOPYTHON/H_contortus_Transcriptomics/src/bioproject_pipeline.py", line 116
    try:
        ^
IndentationError: unindent does not match any outer indentation level
